[package]
name = "tempura"
version = "0.1.0"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
generational-arena = "0.2.8"
topological-sort = "0.1.0"
term_size = "0.3.2"
pest = "2.1.3"
pest_derive = "2.1.0"