[package]
name = "tempura"
version = "0.1.0"
authors = ["Werner Kroneman <werner@wernerkroneman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
generational-arena = { git = "https://github.com/werner291/generational-arena.git", rev = "f039670" }
topological-sort = "0.1.0"
term_size = "0.3.2"
pest = "2.1.3"
pest_derive = "2.1.0"
itertools = "0.9.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7.3"